# poco-scheme

./: .dir-locals.el  .travis.yml  Cargo.toml  LICENSE  README.md
doc/: chibi.org
scheme-examples/: list-primes.scm
src/: ast.rs  context.rs  eval.rs  evaluator.rs  lib.rs  main.rs  prim.rs  util.rs  value.rs  vm.rs
src/context/: tests.rs
tests/: eval.rs
tests/scheme/: smoke.scm
