[package]
name = "r3-scheme"
description = "A toy Scheme implementation"
version = "0.0.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotty/r3-scheme"
edition = "2018"

[dependencies]
gc = "0.3"
log = "0.4.7"
env_logger = "0.6.2"
lexpr = "0.2.2"
